[gd_scene load_steps=49 format=2]

[ext_resource path="res://assets/Enemy01/Enemy1.gd" type="Script" id=1]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Walking_00.png" type="Texture" id=2]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Walking_01.png" type="Texture" id=3]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Walking_02.png" type="Texture" id=4]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Walking_03.png" type="Texture" id=5]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Walking_04.png" type="Texture" id=6]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Walking_05.png" type="Texture" id=7]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Walking_06.png" type="Texture" id=8]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Walking_07.png" type="Texture" id=9]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Walking_08.png" type="Texture" id=10]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Walking_09.png" type="Texture" id=11]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Walking_10.png" type="Texture" id=12]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Walking_11.png" type="Texture" id=13]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Walking_12.png" type="Texture" id=14]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Walking_13.png" type="Texture" id=15]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Walking_14.png" type="Texture" id=16]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Walking_15.png" type="Texture" id=17]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Walking_16.png" type="Texture" id=18]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Walking_17.png" type="Texture" id=19]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Walking_18.png" type="Texture" id=20]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Walking_19.png" type="Texture" id=21]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Attack00.png" type="Texture" id=22]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Attack01.png" type="Texture" id=23]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Attack02.png" type="Texture" id=24]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Attack03.png" type="Texture" id=25]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Attack04.png" type="Texture" id=26]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Attack05.png" type="Texture" id=27]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Attack06.png" type="Texture" id=28]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Attack07.png" type="Texture" id=29]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Attack08.png" type="Texture" id=30]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Attack09.png" type="Texture" id=31]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Attack10.png" type="Texture" id=32]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Attack11.png" type="Texture" id=33]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Attack12.png" type="Texture" id=34]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Attack13.png" type="Texture" id=35]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Attack14.png" type="Texture" id=36]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Attack15.png" type="Texture" id=37]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Attack16.png" type="Texture" id=38]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Attack17.png" type="Texture" id=39]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Attack18.png" type="Texture" id=40]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Attack19.png" type="Texture" id=41]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Attack20.png" type="Texture" id=42]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Attack21.png" type="Texture" id=43]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Attack22.png" type="Texture" id=44]
[ext_resource path="res://assets/Enemy01/Animations/Enemy01 Attack23.png" type="Texture" id=45]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "walking",
"speed": 12.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ) ],
"loop": false,
"name": "attack",
"speed": 17.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 18.262 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.14085, 10 )

[node name="Enemy1" type="KinematicBody2D"]
script = ExtResource( 1 )
speed = 40

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walking"
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 14 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 15 )
shape = SubResource( 3 )

[node name="RayCastFront" type="RayCast2D" parent="."]
position = Vector2( 0, 14 )
enabled = true
cast_to = Vector2( 60, 0 )
collide_with_areas = true

[node name="RayCastBack" type="RayCast2D" parent="."]
position = Vector2( 0, 14 )
enabled = true
cast_to = Vector2( -60, 0 )
collide_with_areas = true

[node name="1stPos" type="Position2D" parent="."]
position = Vector2( 100, 0 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
